Refactor configuration and other fixes.
Summary of changes:

* Refactored the configuration (eggo.cfg) to reorganize more logically.
* Changed config deployment to allow deployment on slaves before master is setup
* Changed config deployment to use templates for the luigi.cfg file and for the env vars to be sourced on the cluster
* Downloaded data now has a flatter directory structure and no longer depends on using recursive traversal of input directories
* (Partially) Updated README with the newest eggo concepts
* Added an EggoError class
* Explicitly install ordereddict on cluster for Luigi compat with py2.6
* Some other misc cosmetic changes

Fixes #62.
Fixes #64.
Fixes #66.

--- a/conf/eggo/eggo.cfg
+++ b/conf/eggo/eggo.cfg
@@ -1,63 +1,59 @@
 ; Eggo "global" config
 
-; NOTE: to access the EGGO_HOME env variable, use "%(eggo_home)s"
+[dfs]
+; The location of the result data sets in the targeted distributed file system
+; (dfs). Currently supports S3 (s3n://), HDFS (hdfs://), and local (file://)
+; targets. The specified URL will be the root of the eggo directory structure
+; (see spec)
+dfs_root_url: s3n://bdg-eggo
 
-[core]
-; The location of the result data sets
-; supports S3 (s3n://), HDFS (hdfs://), and local (file://) targets
-; the specified URL will be the root of the eggo directory structure (see spec)
-eggo_base_url: s3n://bdg-eggo
-
-; The context for execution
-; Possible values are spark_ec2, director, local
-execution: spark_ec2
-
-[versions]
-eggo_fork: laserson
-eggo_branch: EGGO-18-config
-adam_fork: bigdatagenomics
-adam_branch: master
-maven: 3.2.5
-
-
-[paths]
 ; Path to stage the raw input data on the target distributed fs
-; raw data ends up in <eggo_base_url>/<dfs_raw_data_prefix>/<dataset_name>
-dfs_raw_data_prefix: raw
+; raw data ends up in <dfs_raw_data_url>/<dataset_name>
+dfs_raw_data_url: %(dfs_root_url)s/raw
 
 ; Path to store tmp/intermediate data in the target distributed fs
-; tmp data ends up in <eggo_base_url>/<dfs_tmp_data_dir>/<dataset_name>/<random_id>
-dfs_tmp_data_prefix: tmp
+; tmp data ends up in <dfs_root_url>/<dfs_tmp_data_dir>/<dataset_name>/<random_id>
+dfs_tmp_data_url: %(dfs_root_url)s/tmp
 
-; Absolute path to a location on the remote worker's local fs where eggo can
-; write data to. e.g., on EC2 machines, this could be the ephemeral drive mount
-; point /mnt
-worker_data_dir: /mnt
+
+[execution]
+; The context for execution. Possible values are spark_ec2, director, local.
+; There are config sections for each of the possible values.
+context: spark_ec2
 
 ; Random identifier that is generated on module load.  Do not set this manually
 ;random_id: <generated-on-load>
 
 
-[local_env]
+[versions]
+eggo_fork: bigdatagenomics
+eggo_branch: master
+
+adam_fork: bigdatagenomics
+adam_branch: master
+
+maven: 3.2.5
+
+
+[client_env]
 ; Can be overridden by setting SPARK_HOME env var
-spark_home: $SPARK_HOME  ; hack: this var gets interp into shell cmds so env var will fill it
+spark_home: $SPARK_HOME  ; hack: this var gets interpolated into shell cmds so
+						 ; if the env var is set, it should fill it
 
 
 [worker_env]
-eggo_config_worker_path: /mnt/eggo.cfg  ; current file is copied to remote location
+; directory on worker machines where we can write to, including staging
+; temporary large data files; it will be created with mkdir -p
+work_path: /mnt/eggo_work
 
-; Comma-separated list of files to source in .bash_profile on remote worker
-files_to_source: /root/spark-ec2/ec2-variables.sh
+; path on worker machines where this file is copied to
+eggo_config_path: %(work_path)s/eggo.cfg
 
-; Environment variables to set on the worker nodes in .bash_profiletheir values
-; can depend on variables set in %(files_to_source)s, as they will be sourced
-; first
-hadoop_home: /root/ephemeral-hdfs
-spark_home: /root/spark
-streaming_jar: %(hadoop_home)s/contrib/streaming/hadoop-streaming-1.0.4.jar
-spark_master_uri: spark://$MASTERS:7077
-;eggo_home: <not configurable, but set as EGGO_HOME>
-;luigi_config_path: <not configurable, but set as $EGGO_HOME/conf/luigi/luigi.cfg
+; path on worker machines that should be sourced before cmds are run on workers
+eggo_env_path: %(work_path)s/eggo-env.sh
+
+; path on worker machines to the luigi config file
+luigi_config_path: %(work_path)s/luigi.cfg
 
 
 [aws]
@@ -75,6 +71,7 @@ region: us-east-1
 instance_type: r3.2xlarge
 num_slaves: 2
 user: root
+stack_name: bdg-eggo
 
 
 [director]
