[EGGO-68] Eliminate uses of environment vars on workers
Fixes #68.

--- a/conf/eggo/eggo.cfg
+++ b/conf/eggo/eggo.cfg
@@ -49,11 +49,28 @@ work_path: /mnt/eggo_work
 ; path on worker machines where this file is copied to
 eggo_config_path: %(work_path)s/eggo.cfg
 
-; path on worker machines that should be sourced before cmds are run on workers
-eggo_env_path: %(work_path)s/eggo-env.sh
-
 ; path on worker machines to the luigi config file
 luigi_config_path: %(work_path)s/luigi.cfg
+
+; equiv to SPARK_HOME on the worker environment
+spark_home: /root/spark
+
+; should have a bin subdir where the hadoop binary is located
+hadoop_home: /root/ephemeral-hdfs
+
+; path to the hadoop streaming jar
+streaming_jar: %(hadoop_home)s/contrib/streaming/hadoop-streaming-1.0.4.jar
+
+; string compatible with the --master option to spark-submitthis string must
+; evaluate correctly in a shell environment
+spark_master: spark://$(curl http://169.254.169.254/latest/meta-data/public-hostname):7077
+; spark_master: local[2]
+
+; path on worker machines where adam is built/installed
+adam_home: %(work_path)s/adam
+
+; path on worker machines where the eggo repo is checked out
+eggo_home: %(work_path)s/eggo
 
 
 [aws]
