--- a/conf/eggo/eggo.cfg
+++ b/conf/eggo/eggo.cfg
@@ -85,6 +85,8 @@ eggo_home: %(work_path)s/eggo
 ; Spark EC2 scripts configuration
 ; Path to local Spark installation
 region: us-east-1
+; set this to a valid value to specify an availability zone:
+availability_zone:
 instance_type: r3.2xlarge
 num_slaves: 2
 user: root
@@ -95,6 +97,8 @@ stack_name: bdg-eggo
 ; Cloudera Director configuration
 ; TODO: add docs to these options
 region: us-east-1
+; set this to a valid value to specify an availability zone:
+availability_zone:
 launcher_instance_type: m3.large
 launcher_ami: ami-a25415cb  ; RHEL 6.4 x86
 cluster_ami: %(launcher_ami)s
