Actually set the correct availability zone for jenkins job

--- a/test/jenkins/eggo.jenkins.spark_ec2.cfg
+++ b/test/jenkins/eggo.jenkins.spark_ec2.cfg
@@ -86,7 +86,7 @@ eggo_home: %(work_path)s/eggo
 ; Path to local Spark installation
 region: us-east-1
 ; set this to a valid value to specify an availability zone:
-availability_zone:
+availability_zone: us-east-1a
 instance_type: r3.2xlarge
 num_slaves: 2
 user: root
