[EGGO-84] AWS config values not get default empty-strings
Fixes #84.

--- a/conf/eggo/eggo.cfg
+++ b/conf/eggo/eggo.cfg
@@ -74,11 +74,16 @@ eggo_home: %(work_path)s/eggo
 
 
 [aws]
-; These can be set/overridden by setting corresponding local env vars (in ALL_CAPS)
-;aws_access_key_id: <MY_ACCESS_KEY>
-;aws_secret_access_key: <MY_SECRET_KEY>
-;ec2_key_pair: <MY_KEY>
-;ec2_private_key_file: <MY_KEY_FILE>
+; These can be set/overridden by setting corresponding local env vars (in
+; ALL_CAPS)
+
+; set these if using S3 as the underlying DFS
+aws_access_key_id:
+aws_secret_access_key:
+
+; set these if using EC2 for the execution context
+ec2_key_pair:
+ec2_private_key_file:
 
 
 [spark_ec2]
