[EGGO-69] Added test for config completion
Fixes #69.

--- a/conf/eggo/eggo.cfg
+++ b/conf/eggo/eggo.cfg
@@ -1,5 +1,9 @@
 ; Eggo "global" config
 
+; If new sections are added, ensure that
+; eggo.config.assert_eggo_config_complete is updated as well
+
+
 [dfs]
 ; The location of the result data sets in the targeted distributed file system
 ; (dfs). Currently supports S3 (s3n://), HDFS (hdfs://), and local (file://)
@@ -22,7 +26,8 @@ dfs_tmp_data_url: %(dfs_root_url)s/tmp
 context: spark_ec2
 
 ; Random identifier that is generated on module load.  Do not set this manually
-;random_id: <generated-on-load>
+; as it's generated-on-load
+random_id:
 
 
 [versions]
