[EGGO-87] Implement local execution
Fixes #87.

--- a/conf/eggo/eggo.cfg
+++ b/conf/eggo/eggo.cfg
@@ -72,9 +72,11 @@ spark_master: spark://$(curl http://169.254.169.254/latest/meta-data/public-host
 ; spark_master: local[2]
 
 ; path on worker machines where adam is built/installed
+; last component of the path must be 'adam'
 adam_home: %(work_path)s/adam
 
 ; path on worker machines where the eggo repo is checked out
+; last component of the path must be 'eggo'
 eggo_home: %(work_path)s/eggo
 
 
