[EGGO-48] Hook up provision and teardown for Cloudera Director.
Note that setup_master etc do not work yet.

--- a/conf/director/aws.conf
+++ b/conf/director/aws.conf
@@ -117,8 +117,8 @@ ssh {
 #
 
 instances {
-    m1x {
-        type: m1.xlarge
+    xl {
+        type: d2.xlarge
 
         #
         # Amazon Machine Image (AMI)
@@ -164,7 +164,7 @@ exit 0
 
 cloudera-manager {
 
-    instance: ${instances.m1x} {
+    instance: ${instances.xl} {
         tags {
             application: "Cloudera Manager 5"
             group: manager
@@ -280,7 +280,7 @@ cluster {
   masters {
     count: 1
 
-    instance: ${instances.m1x} {
+    instance: ${instances.xl} {
       tags {
         group: master
       }
@@ -309,7 +309,7 @@ cluster {
   }
 
   workers {
-    count: 4
+    count: %(num_workers)s
     #
     # Minimum number of instances required to set up the cluster.
     # Fail and quit if minCount number of instances is not available in this cloud
@@ -317,7 +317,7 @@ cluster {
     #
     minCount: 2
 
-    instance: ${instances.m1x} {
+    instance: ${instances.xl} {
 
       # Put all cluster nodes in a placement group for improved network performance
       # Note: this only works for a limited set of instances
@@ -355,7 +355,7 @@ cluster {
   gateways {
     count: 1
 
-    instance: ${instances.m1x} {
+    instance: ${instances.xl} {
       tags {
         group: gateway
       }
