--- a/conf/eggo/eggo-director.cfg
+++ b/conf/eggo/eggo-director.cfg
@@ -1,9 +1,5 @@
 ; Eggo "global" config
 
-; If new sections are added, ensure that
-; eggo.config.assert_eggo_config_complete is updated as well
-
-
 [dfs]
 ; The location of the result data sets in the targeted distributed file system
 ; (dfs). Currently supports S3 (s3n://), HDFS (hdfs://), and local (file://)
@@ -23,11 +19,10 @@ dfs_tmp_data_url: %(dfs_root_url)s/tmp
 [execution]
 ; The context for execution. Possible values are spark_ec2, director, local.
 ; There are config sections for each of the possible values.
-context: spark_ec2
+context: director
 
 ; Random identifier that is generated on module load.  Do not set this manually
-; as it's generated-on-load
-random_id:
+;random_id: <generated-on-load>
 
 
 [versions]
@@ -49,7 +44,7 @@ spark_home: $SPARK_HOME  ; hack: this var gets interpolated into shell cmds so
 [worker_env]
 ; directory on worker machines where we can write to, including staging
 ; temporary large data files; it will be created with mkdir -p
-work_path: /mnt/eggo_work
+work_path: /tmp/eggo_work
 
 ; path on worker machines where this file is copied to
 eggo_config_path: %(work_path)s/eggo.cfg
@@ -58,17 +53,17 @@ eggo_config_path: %(work_path)s/eggo.cfg
 luigi_config_path: %(work_path)s/luigi.cfg
 
 ; equiv to SPARK_HOME on the worker environment
-spark_home: /root/spark
+spark_home: /opt/cloudera/parcels/CDH-5.3.3-1.cdh5.3.3.p0.5/lib/spark
 
 ; should have a bin subdir where the hadoop binary is located
-hadoop_home: /root/ephemeral-hdfs
+hadoop_home: /opt/cloudera/parcels/CDH-5.3.3-1.cdh5.3.3.p0.5/lib/hadoop
 
 ; path to the hadoop streaming jar
-streaming_jar: %(hadoop_home)s/contrib/streaming/hadoop-streaming-1.0.4.jar
+streaming_jar: /opt/cloudera/parcels/CDH-5.3.3-1.cdh5.3.3.p0.5/lib/hadoop-mapreduce/hadoop-streaming.jar
 
 ; string compatible with the --master option to spark-submitthis string must
 ; evaluate correctly in a shell environment
-spark_master: spark://$(curl http://169.254.169.254/latest/meta-data/public-hostname):7077
+spark_master: yarn-cluster
 ; spark_master: local[2]
 
 ; path on worker machines where adam is built/installed
@@ -79,16 +74,11 @@ eggo_home: %(work_path)s/eggo
 
 
 [aws]
-; These can be set/overridden by setting corresponding local env vars (in
-; ALL_CAPS)
-
-; set these if using S3 as the underlying DFS
-aws_access_key_id:
-aws_secret_access_key:
-
-; set these if using EC2 for the execution context
-ec2_key_pair:
-ec2_private_key_file:
+; These can be set/overridden by setting corresponding local env vars (in ALL_CAPS)
+;aws_access_key_id: <MY_ACCESS_KEY>
+;aws_secret_access_key: <MY_SECRET_KEY>
+;ec2_key_pair: <MY_KEY>
+;ec2_private_key_file: <MY_KEY_FILE>
 
 
 [spark_ec2]
@@ -109,9 +99,10 @@ stack_name: bdg-eggo
 region: us-east-1
 ; set this to a valid value to specify an availability zone:
 availability_zone:
-launcher_instance_type: m3.large
-launcher_ami: ami-a25415cb  ; RHEL 6.4 x86
+launcher_instance_type: m3.medium
+launcher_ami: ami-00a11e68  ; RHEL-6.5_GA_HVM-20140929-x86_64-11-Hourly2-GP2
 cluster_ami: %(launcher_ami)s
+num_workers: 2
 stack_name: bdg-eggo
 user: ec2-user
 ; the pointers to the director configs are executed relative to CWD (which may
