[EGGO-48] Run eggo on a Cloudera Director provisioned cluster.

--- a/conf/eggo/eggo.cfg
+++ b/conf/eggo/eggo.cfg
@@ -109,9 +109,10 @@ stack_name: bdg-eggo
 region: us-east-1
 ; set this to a valid value to specify an availability zone:
 availability_zone:
-launcher_instance_type: m3.large
-launcher_ami: ami-a25415cb  ; RHEL 6.4 x86
+launcher_instance_type: m3.medium
+launcher_ami: ami-00a11e68  ; RHEL-6.5_GA_HVM-20140929-x86_64-11-Hourly2-GP2
 cluster_ami: %(launcher_ami)s
+num_workers: 3
 stack_name: bdg-eggo
 user: ec2-user
 ; the pointers to the director configs are executed relative to CWD (which may
