--- a/conf/eggo/eggo-director.cfg
+++ b/conf/eggo/eggo-director.cfg
@@ -1,5 +1,9 @@
 ; Eggo "global" config
 
+; If new sections are added, ensure that
+; eggo.config.assert_eggo_config_complete is updated as well
+
+
 [dfs]
 ; The location of the result data sets in the targeted distributed file system
 ; (dfs). Currently supports S3 (s3n://), HDFS (hdfs://), and local (file://)
@@ -22,7 +26,8 @@ dfs_tmp_data_url: %(dfs_root_url)s/tmp
 context: director
 
 ; Random identifier that is generated on module load.  Do not set this manually
-;random_id: <generated-on-load>
+; as it's generated-on-load
+random_id:
 
 
 [versions]
@@ -63,7 +68,7 @@ streaming_jar: /opt/cloudera/parcels/CDH-5.3.3-1.cdh5.3.3.p0.5/lib/hadoop-mapred
 
 ; string compatible with the --master option to spark-submitthis string must
 ; evaluate correctly in a shell environment
-spark_master: yarn-cluster
+spark_master: yarn-client
 ; spark_master: local[2]
 
 ; path on worker machines where adam is built/installed
@@ -74,11 +79,16 @@ eggo_home: %(work_path)s/eggo
 
 
 [aws]
-; These can be set/overridden by setting corresponding local env vars (in ALL_CAPS)
-;aws_access_key_id: <MY_ACCESS_KEY>
-;aws_secret_access_key: <MY_SECRET_KEY>
-;ec2_key_pair: <MY_KEY>
-;ec2_private_key_file: <MY_KEY_FILE>
+; These can be set/overridden by setting corresponding local env vars (in
+; ALL_CAPS)
+
+; set these if using S3 as the underlying DFS
+aws_access_key_id:
+aws_secret_access_key:
+
+; set these if using EC2 for the execution context
+ec2_key_pair:
+ec2_private_key_file:
 
 
 [spark_ec2]
@@ -102,7 +112,7 @@ availability_zone:
 launcher_instance_type: m3.medium
 launcher_ami: ami-00a11e68  ; RHEL-6.5_GA_HVM-20140929-x86_64-11-Hourly2-GP2
 cluster_ami: %(launcher_ami)s
-num_workers: 2
+num_workers: 3
 stack_name: bdg-eggo
 user: ec2-user
 ; the pointers to the director configs are executed relative to CWD (which may
