--- a/test/jenkins/eggo.jenkins.spark_ec2.cfg
+++ b/test/jenkins/eggo.jenkins.spark_ec2.cfg
@@ -102,6 +102,7 @@ availability_zone:
 launcher_instance_type: m3.large
 launcher_ami: ami-a25415cb  ; RHEL 6.4 x86
 cluster_ami: %(launcher_ami)s
+num_workers: 3
 stack_name: bdg-eggo-test
 ; the pointers to the director configs are executed relative to CWD (which may
 ; be the same as EGGO_HOME); set them to an absolute path if desired, or use
