Add spot price support
Expose existing flag in spark-ec2 script

--- a/test/jenkins/conf/eggo.jenkins.spark_ec2.cfg
+++ b/test/jenkins/conf/eggo.jenkins.spark_ec2.cfg
@@ -88,6 +88,7 @@ region: us-east-1
 ; set this to a valid value to specify an availability zone:
 availability_zone: us-east-1a
 instance_type: r3.2xlarge
+spot_price:
 num_slaves: 2
 user: root
 stack_name: bdg-eggo-test
