--- a/conf/eggo/eggo-director.cfg
+++ b/conf/eggo/eggo-director.cfg
@@ -98,6 +98,7 @@ region: us-east-1
 ; set this to a valid value to specify an availability zone:
 availability_zone:
 instance_type: r3.2xlarge
+spot_price:
 num_slaves: 2
 user: root
 stack_name: bdg-eggo
