--- a/test/jenkins/conf/eggo.jenkins.local.cfg
+++ b/test/jenkins/conf/eggo.jenkins.local.cfg
@@ -89,6 +89,7 @@ availability_zone: us-east-1a
 ;instance_type: r3.2xlarge
 instance_type: r3.large
 ;instance_type: m1.large
+spot_price:
 num_slaves: 2
 user: root
 stack_name: bdg-eggo-test
