Partial refactor of eggo focusing on Director
Fixes #108.

--- a/eggo/cluster/aws.conf
+++ b/eggo/cluster/aws.conf
@@ -7,7 +7,7 @@
 # Cluster name
 #
 
-name: C5-Simple-AWS
+name: bdg-eggo-default-cluster
 
 #
 # Cloud provider configuration (credentials, region or zone and optional default image)
@@ -23,8 +23,8 @@ provider {
     # If specifying the access keys directly and not through variables, make sure to enclose
     # them in double quotes.
 
-    accessKeyId: "%(accessKeyId)s"
-    secretAccessKey: "%(secretAccessKey)s"
+    accessKeyId: %(accessKeyId)s
+    secretAccessKey: %(secretAccessKey)s
 
     #
     # Whether to publish access keys. Default is false.
@@ -72,7 +72,7 @@ provider {
     # A prefix that Cloudera Director should use when naming the instances (this is not part of the hostname)
     #
 
-    instanceNamePrefix: cloudera-director
+    instanceNamePrefix: bdg-eggo-node
 
     #
     # Specify a size for the root volume (in GBs). Cloudera Director will automatically expand the
@@ -167,7 +167,7 @@ cloudera-manager {
     instance: ${instances.xl} {
         tags {
             application: "Cloudera Manager 5"
-            group: manager
+            eggo_node_type: manager
         }
     }
 
@@ -218,7 +218,7 @@ cluster {
   # }
 
   # NOTE: Sentry is only supported in Cloudera Manager versions 5.1 onward.
-  services: [HDFS, YARN, ZOOKEEPER, IMPALA, HIVE, HUE, OOZIE, SPARK_ON_YARN]
+  services: [HDFS, YARN, IMPALA, HIVE, SPARK_ON_YARN]
 
   #
   # Optional custom service configurations
@@ -277,23 +277,21 @@ cluster {
   #     },
   # }
 
+
   masters {
     count: 1
 
     instance: ${instances.xl} {
       tags {
-        group: master
+        eggo_node_type: master
       }
     }
 
     roles {
       HDFS: ${roles.HDFS_MASTERS}
       YARN: ${roles.YARN_MASTERS}
-      ZOOKEEPER: ${roles.ZOOKEEPER_MASTERS}
       IMPALA: ${roles.IMPALA_MASTERS}
       HIVE: ${roles.HIVE_MASTERS}
-      HUE: ${roles.HUE_MASTERS}
-      OOZIE: ${roles.OOZIE_MASTERS}
       SPARK_ON_YARN: [SPARK_YARN_HISTORY_SERVER]
     }
 
@@ -315,7 +313,7 @@ cluster {
     # Fail and quit if minCount number of instances is not available in this cloud
     # environment. Else, continue setting up the cluster.
     #
-    minCount: 2
+    minCount: 3
 
     instance: ${instances.xl} {
 
@@ -326,7 +324,7 @@ cluster {
       # placementGroup: REPLACE-ME
 
       tags {
-        group: worker
+        eggo_node_type: worker
       }
     }
 
@@ -335,47 +333,5 @@ cluster {
       YARN: ${roles.YARN_WORKERS}
       IMPALA: ${roles.IMPALA_WORKERS}
     }
-
-    # Optional custom role configurations
-
-    # configs {
-    #   HDFS {
-    #     DATANODE {
-    #        dfs_data_dir_list: /data/dn
-    #      }
-    #   }
-    #   HBASE {
-    #     REGIONSERVER {
-    #       hbase_regionserver_java_heapsize: 4000000000
-    #     }
-    #   }
-    # }
-  }
-
-  gateways {
-    count: 1
-
-    instance: ${instances.xl} {
-      tags {
-        group: gateway
-      }
-    }
-
-    roles {
-      HDFS: [GATEWAY]
-      HIVE: [GATEWAY]
-      SPARK_ON_YARN: [GATEWAY]
-      YARN: [GATEWAY]
-    }
-
-    # Optional custom role configurations
-    # configs {
-    #   HIVE {
-    #     GATEWAY {
-    #       hive_metastore_timeout: 3000
-    #       client_config_root_dir: /etc/hive
-    #     }
-    #   }
-    # }
   }
 }
