Cleanup and README improvements

--- a/eggo/cluster/aws.conf
+++ b/eggo/cluster/aws.conf
@@ -7,7 +7,7 @@
 # Cluster name
 #
 
-name: bdg-eggo-default-cluster
+name: %(stack_name)s
 
 #
 # Cloud provider configuration (credentials, region or zone and optional default image)
@@ -140,7 +140,7 @@ instances {
         # iamProfileName: REPLACE-ME
 
         tags {
-            owner: %(keyName)s
+            owner: %(owner)s
         }
 
         bootstrapScript: """#!/bin/sh
@@ -168,6 +168,8 @@ cloudera-manager {
         tags {
             application: "Cloudera Manager 5"
             eggo_node_type: manager
+            eggo_stack_name: ${name}
+            ec2_key_pair: ${provider.keyName}
         }
     }
 
@@ -284,6 +286,8 @@ cluster {
     instance: ${instances.xl} {
       tags {
         eggo_node_type: master
+        eggo_stack_name: ${name}
+        ec2_key_pair: ${provider.keyName}
       }
     }
 
@@ -325,6 +329,8 @@ cluster {
 
       tags {
         eggo_node_type: worker
+        eggo_stack_name: ${name}
+        ec2_key_pair: ${provider.keyName}
       }
     }
 
