Make worker instance type configurable

--- a/eggo/resources/aws.conf
+++ b/eggo/resources/aws.conf
@@ -117,8 +117,8 @@ ssh {
 #
 
 instances {
-    xl {
-        type: d2.xlarge
+    worker {
+        type: %(worker_instance_type)s
 
         #
         # Amazon Machine Image (AMI)
@@ -164,7 +164,7 @@ exit 0
 
 cloudera-manager {
 
-    instance: ${instances.xl} {
+    instance: ${instances.worker} {
         tags {
             application: "Cloudera Manager 5"
             eggo_node_type: manager
@@ -283,7 +283,7 @@ cluster {
   masters {
     count: 1
 
-    instance: ${instances.xl} {
+    instance: ${instances.worker} {
       tags {
         eggo_node_type: master
         eggo_stack_name: ${name}
@@ -319,7 +319,7 @@ cluster {
     #
     minCount: 3
 
-    instance: ${instances.xl} {
+    instance: ${instances.worker} {
 
       # Put all cluster nodes in a placement group for improved network performance
       # Note: this only works for a limited set of instances
